# Anubee

./: .gitignore  BACKLOG.md  DOCUMENTATION.md  Makefile  README.md
ares-tracer/: .gitignore  .gitmodules  README.md  build.sh
docs/: README.md  analyzers.md  engines.md  getting-started.md  mcp.md  probe-specs.md  reading-traces.md  sym1-output-asymmetry.md
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
heimdall/: .gitignore  DOCUMENTATION.md  Makefile  README.md  vmlinux.h
heimdall/tools/heimdall-mcp/: .gitignore  README.md  device.py  pyproject.toml  server.py  trace_store.py
heimdall/tools/heimdall-mcp/tests/: test_device_parse.py  test_folding.py  test_store.py
misc/: Dockerfile
scripts/: anubee_exfil_gen.c  anubee_fileless_gen.c  anubee_massdelete_gen.c  ares_burst_gen.c  ares_exfil_gen.c  ares_fileless_gen.c  ares_massdelete_gen.c  build.sh  check-build-deps.sh  check-firewall.sh  deploy.sh  device-test.sh
specs/: common-dump.spec  common-dynload.spec  common-file.spec  common-getprop.spec  common-mod.spec  common-network.spec  common-process.spec  common-string.spec  example-fd.spec
src/: main.c
tests/: check_driver_symbols.sh  pread_all_shim.c  test_a11y_abuse_classify.c  test_accessibility_detect_classify.c  test_art_buildid.c  test_art_nterp.c  test_art_shadow.c  test_capabilities.c  test_cfi_eh.c  test_cfi_elf.c  test_cfi_load.c  test_cfi_parse.c  test_cfi_step.c  (+45 more)
(+288 files in other folders)
