[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "heimdall-mcp"
version = "0.1.0"
description = "MCP server exposing heimdall syscall traces and on-device library dumping to an LLM client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2,<2",
    "duckdb>=1.0,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
heimdall-mcp = "server:main"

[tool.setuptools]
py-modules = ["server", "trace_store", "device"]

[tool.pytest.ini_options]
testpaths = ["tests"]
